recursion.cons.lessons.recursion.cons.Remove.scala.error
remove:6: error: not enough arguments for method remove: (l: List[Int], v: Int)List[Int].
Unspecified value parameter v.
	remove(l.tail);
              ^